# Hybrid-Buzzer

./: .gitignore  README.md
.github/workflows/: static.yml
CAD/Clicker/: Clicker.f3z  Clicker.stp
CAD/Clicker/Meshes/: clicker_a.stl  clicker_b.stl
CAD/Receiver/: receiver_assembly.f3z  receiver_assembly.stp
CAD/Receiver/Meshes/: receiver_top_plate.stl
CAD/Transmitter/: transmitter_assembly.f3z  transmitter_assembly.stp
CAD/Transmitter/Meshes/: transmitter_battery_door.stl  transmitter_enclosure.stl  transmitter_top_cover.stl
EDA/Receiver/: receiver.kicad_prl  receiver.kicad_pro  receiver.kicad_sch
EDA/Transmitter/: transmitter.kicad_pcb  transmitter.kicad_prl  transmitter.kicad_pro  transmitter.kicad_sch  transmitter.step
buzzer_receiver/: CMakeLists.txt  partitions.csv  sdkconfig  todo.txt
buzzer_receiver/eda/: receiver.kicad_pcb  receiver.kicad_pro
buzzer_receiver/main/: CMakeLists.txt  button.c  button.h  buzz.c  buzz.h  captive_dns.c  captive_dns.h  config.c  config.h  hello_world_main.c  index.html  main.c  webserver.c  webserver.h  wireless.c  wireless.h
buzzer_receiver/test_packets/: eight.txt  five.txt  four.txt  harness.js  nine.txt  one.txt  seven.txt  six.txt  ten.txt  three.txt  two.txt
buzzer_transmitter/: CMakeLists.txt
buzzer_transmitter/main/: CMakeLists.txt  button.c  button.h  buttons.c  buttons.h  config.c  config.h  led.c  led.h  main.c  wireless.c  wireless.h
shared/packet/include/: packet.h
